--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -65,7 +65,8 @@ The schedule for the different curricula are listed here:
       <tr> <td>Morning</td>
         <td>
           {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating, analyzing and exporting data with tidyverse</a>
+      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating, analyzing and exporting data with tidyverse</a></td></tr>
+      <tr><td> </td><td><a href="https://angus.readthedocs.io/en/2019/R_Intro_Lesson.html#combining-datasets-using-join">Combining Datasets using join</a></td></tr>
           {% elsif site.flavor == "python" %}
           <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data analysis and Visualization</a>
           {% else %}
